--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,41 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
+        "drupal/admin_toolbar": "^1.23",
+        "drupal/ckeditor_media_embed": "^1.1",
+        "drupal/colorbox": "^1.4",
+        "drupal/commerce": "^2.5",
+        "drupal/components": "^1.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5",
+        "drupal/crop": "^1.5",
+        "drupal/ctools": "^3.0",
+        "drupal/devel": "^1.2",
+        "drupal/entity_browser": "^1.4",
+        "drupal/entity_embed": "^1.0@beta",
+        "drupal/entity_reference_revisions": "^1.4",
+        "drupal/extlink": "^1.0",
+        "drupal/field_group": "^1.0",
+        "drupal/focal_point": "^1.0@beta",
+        "drupal/geolocation": "^1.11",
+        "drupal/google_analytics": "^2.2",
+        "drupal/honeypot": "^1.27",
+        "drupal/linkit": "^4.3",
+        "drupal/media_entity_browser": "^1.0@beta",
+        "drupal/media_entity_image": "^1.2",
+        "drupal/metatag": "^1.4",
+        "drupal/panels": "^4.2",
+        "drupal/paragraphs": "^1.2",
+        "drupal/pathauto": "^1.1",
+        "drupal/redirect": "^1.1",
+        "drupal/scheduler": "^1.0",
+        "drupal/search_api": "^1.7",
+        "drupal/simple_sitemap": "^2.11",
+        "drupal/slick": "^1.0",
+        "drupal/slick_media": "^1.0",
+        "drupal/stage_file_proxy": "^1.0@alpha",
+        "drupal/taxonomy_access_fix": "^2.5",
+        "drupal/token": "^1.1",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
