--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "drupal-composer/drupal-project",
-    "description": "Project template for Drupal 8 projects with composer",
+    "name": "mediacurrent/mc_top_modules",
+    "description": "Project template containing the latest modules from Jay's \"Top Modules\" blog series on Mediacurrent.com",
     "type": "project",
     "license": "GPL-2.0-or-later",
     "authors": [
         {
-            "name": "",
+            "name": "Jay Callicott",
             "role": ""
         }
     ],
@@ -13,10 +13,15 @@
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
+        },
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
         }
     ],
     "require": {
         "composer/installers": "^1.2",
+        "oomphinc/composer-installers-extender": "^1.1",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
         "drupal/admin_toolbar": "^1.23",
@@ -51,13 +56,20 @@
         "drupal/simple_sitemap": "^2.11",
         "drupal/slick": "^1.0",
         "drupal/slick_media": "^1.0",
+        "drupal/slick_views": "^1.0@RC",
         "drupal/stage_file_proxy": "^1.0@alpha",
         "drupal/taxonomy_access_fix": "^2.5",
         "drupal/token": "^1.1",
+        "drupal/viewsreference": "^1.2",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
-        "webmozart/path-util": "^2.3"
+        "webmozart/path-util": "^2.3",
+        "vardot/blazy": "1.8.2.1",
+        "bower-asset/dropzone": "^5.1",
+        "bower-asset/ckeditor": "4.5.11",
+        "bower-asset/slick-carousel": "^1.7",
+        "bower-asset/jquery.easing": "^1.3"
     },
     "require-dev": {
         "webflo/drupal-core-require-dev": "~8.5"
@@ -92,13 +104,23 @@
         ]
     },
     "extra": {
+        "installer-types": [
+            "library",
+            "bower-asset",
+            "npm-asset"
+        ],
         "installer-paths": {
             "web/core": ["type:drupal-core"],
-            "web/libraries/{$name}": ["type:drupal-library"],
+            "web/libraries/{$name}": ["type:drupal-library", "type:bower-asset", "type:npm-asset"],
             "web/modules/contrib/{$name}": ["type:drupal-module"],
             "web/profiles/contrib/{$name}": ["type:drupal-profile"],
             "web/themes/contrib/{$name}": ["type:drupal-theme"],
             "drush/contrib/{$name}": ["type:drupal-drush"]
+        },
+        "patches": {
+            "drupal/slick": {
+                "2907371 - Update slick paths to correspond to bower asset paths": "https://www.drupal.org/files/issues/slick-bower-paths-1.patch"
+            }
         }
     }
 }
